# devagents

./: .env.example  .gitignore  Makefile  README.md  compose.test.yml  docker-compose.yml  pytest.ini  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: status-update.md
.github/workflows/: blank.yml  ci.yml  code-review-factory.yml
app/: __init__.py  analytics.py  beta_runs.py  economics.py  main.py  notifications.py  observability.py
gados-control-plane/: Dockerfile  README.md  pyproject.toml  requirements.txt
gados-control-plane/gados_control_plane/: __init__.py  agents_langgraph.py  artifacts.py  beta_policy_drift.py  beta_run_store.py  beta_sla_sentinel.py  beta_spend_guardrail.py  bus.py  main.py  paths.py  reporting.py  validator.py
gados-control-plane/gados_control_plane/templates/: artifacts.html  base.html  beta_run_detail.html  beta_runs.html  create.html  dashboard.html  decisions.html  inbox.html  reports.html  validate.html  view.html
gados-control-plane/scripts/: validate_artifacts.py
gados-control-plane/tests/: test_bus.py
gados-project/: README.md
gados_common/: __init__.py  analytics.py  fileio.py  observability.py
scripts/: audit_graph.py  flush_digest.py  generate_review_pack.py  run_daily_spend_guardrail.py  smoke_traffic.sh
tests/: test_app.py  test_beta_guardrail.py  test_beta_runs.py  test_bugbot_fixes.py  test_economics.py  test_integration_nodocker_smoke.py  test_notifications.py
windows-installer/: GadosInstaller.psm1  README.md  install.cmd  install.ps1  run-tests.ps1
(+219 files in other folders)
