[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gados-control-plane"
version = "0.1.0"
description = "GADOS Control Plane (CA GUI) + LangGraph virtual agents"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gados_control_plane*"]

